[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
features = "0.10.0"
full = "0.3.0"
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0.208",  features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
