[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
derive_builder = "0.20.0"
features = "0.10.0"
full = "0.3.0"
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1.0.208",  features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
ctor = "0.2.8"
lazy_static = "1.5.0"

